@@ -1,19 +1,0 @@
-# $NetBSD: Makefile,v 1.10 2013/05/31 12:40:18 wiz Exp $
-
-DISTNAME=	ExtUtils-Install-1.54
-PKGNAME=	p5-${DISTNAME}
-PKGREVISION=	4
-CATEGORIES=	devel perl5
-MASTER_SITES=	${MASTER_SITE_PERL_CPAN:=ExtUtils/}
-
-MAINTAINER=	pkgsrc-users@NetBSD.org
-HOMEPAGE=	http://search.cpan.org/dist/ExtUtils-Install/
-COMMENT=	Install files from here to there
-LICENSE=	${PERL5_LICENSE}
-
-USE_LANGUAGES=		# empty
-PERL5_MODULE_TYPE=	Module::Build
-PERL5_PACKLIST=		auto/ExtUtils/Install/.packlist
-
-.include "../../lang/perl5/module.mk"
-.include "../../mk/bsd.pkg.mk"
